[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/LifeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/EmeraldCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/EnergyBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/BonbCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=5]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 93.0
size_flags_horizontal = 5
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 117.0
size_flags_horizontal = 5

[node name="Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 540.0
margin_bottom = 97.0
size_flags_horizontal = 2

[node name="LifeBar" parent="HBoxContainer/Bars" instance=ExtResource( 1 )]
margin_right = 540.0

[node name="EnergyBar" parent="HBoxContainer/Bars" instance=ExtResource( 3 )]
margin_top = 57.0
margin_right = 540.0
margin_bottom = 97.0

[node name="Counters" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 780.0
margin_top = 28.0
margin_right = 984.0
margin_bottom = 68.0
rect_min_size = Vector2( 204, 40 )
size_flags_vertical = 4

[node name="BonbCounter" parent="HBoxContainer/Counters" instance=ExtResource( 4 )]
margin_bottom = 40.0

[node name="EmeraldCounter" parent="HBoxContainer/Counters" instance=ExtResource( 2 )]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 40.0

[connection signal="bomb_changed" from="." to="HBoxContainer/Counters/BonbCounter" method="_on_GUI_bomb_changed"]
[connection signal="energy_changed" from="." to="HBoxContainer/Bars/EnergyBar" method="_on_GUI_energy_changed"]
[connection signal="esmerald_changed" from="." to="HBoxContainer/Counters/EmeraldCounter" method="_on_GUI_esmerald_changed"]
[connection signal="health_changed" from="." to="HBoxContainer/Bars/LifeBar" method="_on_GUI_health_changed"]
